consolidate dropdown components

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 :root {
   --white: #fff;
-  --grey: #F7F9FC;
+  --grey: #f1f4f8b0;
   --dark-grey: #6b7c93;
   --green: #24b47e;
   --teal: #4F96CE;
